openshift/kafka/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: yosefshoval-dev
  labels:
    app: kafka-ui
    app.kubernetes.io/part-of: scanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 10m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: yosefshoval-dev
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-ui
  namespace: yosefshoval-dev
  labels:
    app: kafka-ui
spec:
  to:
    kind: Service
    name: kafka-ui
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
